@@ -4107,8 +4107,24 @@ public:
     these do not include menu command events, which are
     handled using wxCommandEvent objects.
 
-    The default handler for @c wxEVT_MENU_HIGHLIGHT displays help
-    text in the first field of the status bar.
+    Events of this class are generated by both menus that are part of a
+    wxMenuBar, attached to wxFrame, and popup menus shown by
+    wxWindow::PopupMenu(). They are sent to the following objects until one of
+    them handles the event:
+
+        -# The menu object itself, as returned by GetMenu(), if any.
+        -# The wxMenuBar to which this menu is attached, if any.
+        -# The window associated with the menu, e.g. the one calling
+        PopupMenu() for the popup menus.
+        -# The top level parent of that window if it's different from the
+        window itself.
+
+    This is similar to command events generated by the menu items, but, unlike
+    them, wxMenuEvent are only sent to the window itself and its top level
+    parent but not any intermediate windows in the hierarchy.
+
+    The default handler for @c wxEVT_MENU_HIGHLIGHT in wxFrame displays help
+    text in the status bar, see wxFrame::SetStatusBarPane().
 
     @beginEventTable{wxMenuEvent}
     @event{EVT_MENU_OPEN(func)}
